--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-paper": "3.6.0",
-    "@expo/vector-icons": "^14.0.0",
     "mobx": "5.15.4",
     "react-is": "^16.8.0",
     "mobx-react": "6.2.3",
+    "@rneui/base": "4.0.0-rc.7",
+    "@types/react": "*",
+    "@rneui/themed": "*",
     "expo-constants": "~16.0.2",
     "styled-components": "*",
+    "@expo/vector-icons": "^14.0.0",
+    "react-native-paper": "3.6.0",
     "react-native-screens": "3.31.1",
     "@react-navigation/stack": "6.3.20",
     "react-native-reanimated": "~3.10.1",
+    "@react-navigation/native": "6.1.6",
     "react-native-gesture-handler": "~2.16.1",
+    "@react-navigation/native-stack": "6.9.12",
     "react-native-safe-area-context": "4.10.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native-stack": "6.9.12",
-    "@types/react": "*",
-    "@react-navigation/native": "6.1.6"
+    "@react-native-community/progress-bar-android": "*",
+    "react-native-share": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
